// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should render a disabled CheckBox 1`] = `
<div>
  <label
    class="Label--label--QAnfT Label--isDisabled--cM4ye label"
    for="checkbox-2"
  >
    <input
      class="input"
      disabled=""
      id="checkbox-2"
      name="checkbox-2"
      type="checkbox"
    />
    Shopify
  </label>
</div>
`;

exports[`<CheckBox /> should render an enabled CheckBox 1`] = `
<div>
  <label
    class="Label--label--QAnfT label"
    for="checkbox-1"
  >
    <input
      class="input"
      id="checkbox-1"
      name="checkbox-1"
      type="checkbox"
    />
    Shopify
  </label>
</div>
`;

exports[`<CheckBox /> should render caption under the checkbox 1`] = `
<div>
  <label
    class="Label--label--QAnfT label"
    for="checkbox-3"
  >
    <input
      class="input"
      id="checkbox-3"
      name="checkbox-3"
      type="checkbox"
    />
    Shopify
  </label>
  <div
    class="caption caption"
  >
    first e-commerce platform
  </div>
</div>
`;
